xử lý admin đơn hàng Clip 48

--- a/webroot/css/home.css
+++ b/webroot/css/home.css
@@ -165,8 +165,8 @@ a {
 	text-align: center;
 }
 .table{
-	width:860px;
-	margin-left: 30PX;
+	width:840px;
+	margin-left: 30px;
 }
 .cart_link{
 	width: 870px;
